--- a/02_Intro_Pandas_Numpy.ipynb
+++ b/02_Intro_Pandas_Numpy.ipynb
@@ -550,6 +550,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Check out other pandas read methods here: https://pandas.pydata.org/docs/reference/io.html"
+      ],
+      "metadata": {
+        "id": "Dh4ypNVEYsqq"
+      }
     }
   ]
 }
