--- a/02_Intro_Pandas_Numpy.ipynb
+++ b/02_Intro_Pandas_Numpy.ipynb
@@ -6,7 +6,6 @@
       "name": "02-Intro_Pandas_Numpy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,9 +429,9 @@
       },
       "source": [
         "\n",
-        "1. Upload the P3HT_Abs_data_Teaching.txt in the Data folder on Ilias to a folder on your google drive.\n",
+        "1. In the Data folder on Ilias there is the data file 4ms_10 av_30 s_Absorbance_10-32-04-868.txt. Upload this file to a folder on your google drive. If you don't have a google account, make it now. Look at the file by clicking on it. Try to make sense of the data with the help of the metadata file also in the Ilias folder. \n",
         "\n",
-        "2. Mount the file to this your notebook (example code below)\n"
+        "2. Mount the file to this your notebook (example code below). The path and the file name must match the ones on your google drive, of course.\n"
       ]
     },
     {
@@ -440,7 +439,7 @@
       "source": [
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')\n",
-        "#path = '/content/drive/MyDrive/Courses/DSF-DCBP/P3HT_Abs_data_Teaching.txt' # To be adapted"
+        "#path = '/content/drive/MyDrive/Courses/DSF-DC....' # To be adapted"
       ],
       "metadata": {
         "id": "DYR4iYYhI0gH"
@@ -451,7 +450,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Study and play with the code below. Try to understand based on the API description (https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html)."
+        "3. Study and play with the code below. Try to understand based on the API description (https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html). Hint: Use the header argument."
       ],
       "metadata": {
         "id": "bHMdX664RcQ9"
@@ -464,7 +463,7 @@
       },
       "source": [
         "#import pandas as pd\n",
-        "#df = pd.read_csv(path, delimiter='\\t', header=None)"
+        "#df = pd.read_csv(path, delimiter='\\t')"
       ],
       "execution_count": null,
       "outputs": []
@@ -472,7 +471,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Study this dataset a bit with the df.head(), df.info() and df.describe() methods."
+        "4. Study this dataset a bit with the df.head(), df.info() and df.describe() methods. The available metadata is [here](https://docs.google.com/document/d/1L6m4OFiCKSHlHlr4_4TFKLKHcJfIkiMhHtD3tcsxpD8/edit?usp=sharing)"
       ],
       "metadata": {
         "id": "V-hJAIi5R69m"
@@ -559,6 +558,17 @@
       "metadata": {
         "id": "Dh4ypNVEYsqq"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "sfrQGNjc20L0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
