--- a/00_Introduction.ipynb
+++ b/00_Introduction.ipynb
@@ -126,6 +126,32 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "3+2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZPt0EEwcUgSx",
+        "outputId": "cb373ebc-372a-4cb6-f6d6-9d23614e8296"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# 3. Computers"
@@ -237,7 +263,12 @@
       "source": [
         "### Text Cell Example\n",
         "\n",
-        "Double click on this cell and add a picture, hyperlink and a bullet list."
+        "I write some notes about experiment\n",
+        "\n",
+        "- sd\n",
+        "- sdfgfds\n",
+        "- dffd\n",
+        "\n"
       ]
     },
     {
@@ -252,14 +283,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b10IDckBlNVC"
+        "id": "b10IDckBlNVC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "79afea08-4532-4bd7-8d11-35bf892f76e6"
       },
       "source": [
         "# Change and run/execute this first line of Python\n",
-        "# print('In Python # means a comment, i.e. a code line that is not executed')"
+        "print('In Python # means a comment, i.e. a code line that is not executed')"
       ],
       "execution_count": 2,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "In Python # means a comment, i.e. a code line that is not executed\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -368,16 +411,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x-2y0jQgsyIJ",
-        "outputId": "c6577337-9364-499a-cf1a-29ad57c889e2"
+        "outputId": "7d9b7dbc-315b-4c6d-a05f-8b1791ddf83f"
       },
       "source": [
         "# This is a Python code carrying out an algorithm which sums ob the natural number from 1 to 100. Play with it.\n",
         "sum = 0\n",
         "for i in range (1,100):\n",
-        "  sum = sum + i\n",
+        "  sum += i\n",
         "print(sum) "
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
