--- a/11_Basic_Image_Processing.ipynb
+++ b/11_Basic_Image_Processing.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "TYDcmKVCxBZ7"
       },
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "qgCE_TZ7xBZ8"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Yt1eDe2DxBZ8"
       },
@@ -108,11 +108,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "OOOdmkJkhpUZ"
+        "id": "OOOdmkJkhpUZ",
+        "outputId": "44b0be60-bde5-4620-da5c-d2000baf4f1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -120,11 +132,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "3oWxa2cG_B6Z"
+        "id": "3oWxa2cG_B6Z",
+        "outputId": "cb690d0d-8d74-47b0-f889-13f942a5c037",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pillow_heif\n",
+            "  Downloading pillow_heif-0.2.3-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.1 MB)\n",
+            "\u001b[K     |████████████████████████████████| 13.1 MB 14.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: cffi>=1.14.6 in /usr/local/lib/python3.7/dist-packages (from pillow_heif) (1.15.0)\n",
+            "Requirement already satisfied: pillow>=6.0.0 in /usr/local/lib/python3.7/dist-packages (from pillow_heif) (7.1.2)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi>=1.14.6->pillow_heif) (2.21)\n",
+            "Installing collected packages: pillow-heif\n",
+            "Successfully installed pillow-heif-0.2.3\n"
+          ]
+        }
+      ],
       "source": [
         "# We need to convert the image HEIC formats to something more usual. Stack overflow suggests to use PIL for that. So we installs that.\n",
         "!pip install pillow_heif "
@@ -132,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "yrd5Zl-A-t7_"
       },
@@ -144,7 +175,7 @@
         "\n",
         "url_pre  = '/content/drive/MyDrive/Courses/DSF-DCBP/Data-Images/'\n",
         "url_name = 'IMG_5387.HEIC'\n",
-        "heif_file = pillow_heif.read_heif(url_pre+url_name)\n",
+        "heif_file = pillow_heif.read(url_pre+url_name)\n",
         "image = Image.frombytes(heif_file.mode,heif_file.size,heif_file.data,\"raw\",)\n",
         "url_name = url_name.split('.')[0]+'.png'\n",
         "image.save(url_pre+url_name, format=\"png\")"
@@ -161,14 +192,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 865
         },
         "id": "S4wil7CHxBZ-",
-        "outputId": "4cefd9e0-fd7a-4aa1-9a38-54c4a81e05c4"
+        "outputId": "093ae7be-e615-466e-e3b0-61dda36d7cfa"
       },
       "outputs": [
         {
@@ -226,13 +257,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZlFDWC2eFgEX",
-        "outputId": "a506bd03-49c6-4d2a-edd7-8a1e6f62bd58"
+        "outputId": "f5c6ddcb-2c16-4b9e-a47b-8cf17be9ce9b"
       },
       "outputs": [
         {
@@ -257,7 +288,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 9
         }
       ],
       "source": [
@@ -269,13 +300,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hmlyDVCvGEPg",
-        "outputId": "80e024e1-1393-4e4d-cf62-81c63382c23e"
+        "outputId": "537d30c5-ce02-453b-f62a-2dd89c0f4901"
       },
       "outputs": [
         {
@@ -299,14 +330,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
         },
         "id": "sa9YzQd_I_Qv",
-        "outputId": "9cf673f6-5b3b-475c-afe1-5fe39c785abb"
+        "outputId": "976dd865-9582-432a-beb5-121ff82e162c"
       },
       "outputs": [
         {
