--- a/12_Fitting.ipynb
+++ b/12_Fitting.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "19ZOClUOpp8N"
       },
@@ -81,7 +81,7 @@
         },
         "outputId": "c91de9c4-51c7-472a-dc15-6a5dc362425e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
         },
         "outputId": "cf243c67-686c-4ce0-99b0-468a831c4678"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
         },
         "outputId": "7e3164a7-8f20-4946-df2b-213a2622e1ea"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +438,7 @@
         },
         "outputId": "3c68e99a-b5bb-408a-ae39-f399991aee86"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +477,7 @@
         "id": "GWny3HeLWg4p",
         "outputId": "bcf84e1e-6829-450d-d2d2-f04876a827f1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,7 +512,7 @@
       "metadata": {
         "id": "d05YiwBW94Rf"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -559,7 +559,7 @@
         "id": "MP76NqIMnawm",
         "outputId": "ea12b06b-f2d9-4135-ed91-2ff0f59f4540"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -600,7 +600,7 @@
         "id": "OUcHYnBynfr0",
         "outputId": "8e573cb0-920f-45e6-9db3-7ade3c0519f2"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -663,7 +663,7 @@
         "id": "vvqmwQrCuaMj",
         "outputId": "174c93a9-f0f9-43ea-fe4c-7ef7588950bf"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +688,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from symfit import Parameter, Variable\n",
+        "from symfit import Parameter, Variable, parameters\n",
         "\n",
         "a = Parameter('a')\n",
         "b = Parameter('b')\n",
@@ -698,7 +698,7 @@
       "metadata": {
         "id": "abhg3f7vzJYV"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -718,7 +718,7 @@
       "metadata": {
         "id": "6xUzwnrZzmn6"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -733,7 +733,7 @@
       "metadata": {
         "id": "lQRU4FVozpoW"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -748,7 +748,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,7 +778,7 @@
           "height": 265
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
