--- a/CodingTask2_Sol.ipynb
+++ b/CodingTask2_Sol.ipynb
@@ -6,7 +6,7 @@
       "name": "CodingTask2-Sol.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP36rrtjGirXX3V+E92JxME",
+      "authorship_tag": "ABX9TyM3BYfGp96oMUa664eq/7WS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,8 +40,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Coding Task 2\n",
+        "# Coding Task 2 - Solution examples"
+      ],
+      "metadata": {
+        "id": "KjEPZeM7iAC1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
+        "## Remarks regarding the submissions\n",
+        "\n",
+        "- 14 submissions\n",
+        "- 1 submission by 3 people, the rest submitted individually\n",
+        "- All (?) used the findContours method from the openCV library\n",
+        "- Points from 7 to 12\n",
+        "- Generally it seems that active course participants are now able to attack data science tasks and problems with Python and develop solutions\n",
+        "\n",
+        "## Questions ?\n",
+        "- ...\n",
+        "\n",
+        "## Review some notebooks?\n",
+        "- ...\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "M3LkcE2diDsd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Boundary Conditions\n",
         "- Deadline (upload to Ilias): 2022-05-15 24:00\n",
         "- Solutions in lecture on 2022-05-18\n",
         "- Estimated effort: from 4 to 60 hours\n",
@@ -88,7 +126,7 @@
       "cell_type": "code",
       "source": [
         "# First we need some tools\n",
-        "!pip install pillow_heif\n",
+        "#!pip install pillow_heif\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "from PIL import Image\n",
@@ -104,23 +142,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZXEE2YGlZOQZ",
-        "outputId": "1f79c2a7-4315-41a7-a848-d6d36892e42f"
+        "outputId": "2dc6c227-d6ff-46e8-94aa-6fcca754f1d7"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting pillow_heif\n",
-            "  Downloading pillow_heif-0.2.3-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.1 MB)\n",
-            "\u001b[K     |████████████████████████████████| 13.1 MB 4.7 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: pillow>=6.0.0 in /usr/local/lib/python3.7/dist-packages (from pillow_heif) (7.1.2)\n",
+            "Requirement already satisfied: pillow_heif in /usr/local/lib/python3.7/dist-packages (0.2.4)\n",
+            "Requirement already satisfied: pillow>=8.3.0 in /usr/local/lib/python3.7/dist-packages (from pillow_heif) (9.1.1)\n",
             "Requirement already satisfied: cffi>=1.14.6 in /usr/local/lib/python3.7/dist-packages (from pillow_heif) (1.15.0)\n",
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi>=1.14.6->pillow_heif) (2.21)\n",
-            "Installing collected packages: pillow-heif\n",
-            "Successfully installed pillow-heif-0.2.3\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -147,9 +181,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9fa41a1e-c5b1-486f-817e-86df3b15a7ac"
+        "outputId": "507a476e-3be2-45f0-8076-61a0e1d4b8c9"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,9 +213,9 @@
           "height": 287
         },
         "id": "QJCpD2kwbJaD",
-        "outputId": "9824beba-85b6-4d3f-a71d-5ade3dbbd2fd"
+        "outputId": "f56f6725-6b8d-4bd2-cd25-14f611e99b92"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,9 +254,9 @@
           "height": 498
         },
         "id": "NSPLVFp7dz0s",
-        "outputId": "1e27b0a8-2680-4fcb-c392-67893a29660a"
+        "outputId": "2717f4ed-4ab9-4e31-c0f9-e3a7eb09f360"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -269,9 +303,9 @@
           "height": 628
         },
         "id": "3ULU-wVKi7qD",
-        "outputId": "9f71864f-7d04-4d73-d63b-cd08349b9612"
+        "outputId": "c51f23f2-3cf4-4efe-fb75-2d0858929359"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,12 +336,12 @@
         "\n",
         "stepsize  = 120\n",
         "threshold = 200\n",
-        "# I have only counted the 3 first images, rest is just set to 50\n",
-        "ground_truth = {'IMG_5379':50,'IMG_5380':48,'IMG_5381':62,'IMG_5382':50,\\\n",
-        "                'IMG_5383':50,'IMG_5384':50,'IMG_5385':50,\\\n",
-        "                'IMG_5386':50,'IMG_5386':50,'IMG_5387':50,'IMG_5388':50,\\\n",
-        "                'IMG_5389':50,'IMG_5390':50,'IMG_5391':50,\\\n",
-        "                'IMG_5392':50,'IMG_5393':50}\n",
+        "# We counted the colored wells in class:\n",
+        "ground_truth = {'IMG_5379':52,'IMG_5380':47,'IMG_5381':62,'IMG_5382':45,\\\n",
+        "                'IMG_5383':46,'IMG_5384':32,'IMG_5385':52,\\\n",
+        "                'IMG_5386':51,'IMG_5387':48,'IMG_5388':70,'IMG_5389':55,\\\n",
+        "                'IMG_5390':58,'IMG_5391':40,'IMG_5392':63,\\\n",
+        "                'IMG_5393':60}\n",
         "\n",
         "url_pre  = '/content/drive/MyDrive/Courses/DSF-DCBP/Data-Images/'\n",
         "files  = os.listdir(url_pre)\n",
@@ -339,29 +373,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GDrd-rCq35pm",
-        "outputId": "c09482c7-b842-4f3a-8f78-264d3af9de75"
+        "outputId": "fbaa6c39-51c0-4a9c-f037-4633c4d5f226"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "For  IMG_5379.png  the algorithm counts  41  bins out of  50 counted by eye.\n",
-            "For  IMG_5380.png  the algorithm counts  76  bins out of  48 counted by eye.\n",
+            "For  IMG_5379.png  the algorithm counts  41  bins out of  52 counted by eye.\n",
+            "For  IMG_5380.png  the algorithm counts  76  bins out of  47 counted by eye.\n",
             "For  IMG_5381.png  the algorithm counts  54  bins out of  62 counted by eye.\n",
-            "For  IMG_5382.png  the algorithm counts  55  bins out of  50 counted by eye.\n",
-            "For  IMG_5383.png  the algorithm counts  60  bins out of  50 counted by eye.\n",
-            "For  IMG_5384.png  the algorithm counts  18  bins out of  50 counted by eye.\n",
-            "For  IMG_5385.png  the algorithm counts  70  bins out of  50 counted by eye.\n",
-            "For  IMG_5386.png  the algorithm counts  56  bins out of  50 counted by eye.\n",
-            "For  IMG_5387.png  the algorithm counts  54  bins out of  50 counted by eye.\n",
-            "For  IMG_5388.png  the algorithm counts  67  bins out of  50 counted by eye.\n",
-            "For  IMG_5389.png  the algorithm counts  76  bins out of  50 counted by eye.\n",
-            "For  IMG_5390.png  the algorithm counts  88  bins out of  50 counted by eye.\n",
-            "For  IMG_5391.png  the algorithm counts  92  bins out of  50 counted by eye.\n",
-            "For  IMG_5392.png  the algorithm counts  109  bins out of  50 counted by eye.\n",
-            "For  IMG_5393.png  the algorithm counts  103  bins out of  50 counted by eye.\n"
+            "For  IMG_5382.png  the algorithm counts  55  bins out of  45 counted by eye.\n",
+            "For  IMG_5383.png  the algorithm counts  60  bins out of  46 counted by eye.\n",
+            "For  IMG_5384.png  the algorithm counts  18  bins out of  32 counted by eye.\n",
+            "For  IMG_5385.png  the algorithm counts  70  bins out of  52 counted by eye.\n",
+            "For  IMG_5386.png  the algorithm counts  56  bins out of  51 counted by eye.\n",
+            "For  IMG_5387.png  the algorithm counts  54  bins out of  48 counted by eye.\n",
+            "For  IMG_5388.png  the algorithm counts  67  bins out of  70 counted by eye.\n",
+            "For  IMG_5389.png  the algorithm counts  76  bins out of  55 counted by eye.\n",
+            "For  IMG_5390.png  the algorithm counts  88  bins out of  58 counted by eye.\n",
+            "For  IMG_5391.png  the algorithm counts  92  bins out of  40 counted by eye.\n",
+            "For  IMG_5392.png  the algorithm counts  109  bins out of  63 counted by eye.\n",
+            "For  IMG_5393.png  the algorithm counts  103  bins out of  60 counted by eye.\n"
           ]
         }
       ]
@@ -465,27 +499,27 @@
           "height": 379
         },
         "id": "DS914tW8erqc",
-        "outputId": "527afba9-0b89-4df6-8309-6003ed972d43"
+        "outputId": "0232aa8a-1b51-4799-f15a-c218fe925ba9"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:18: FutureWarning: skimage.measure.label's indexing starts from 0. In future version it will start from 1. To disable this warning, explicitely set the `start_label` parameter to 1.\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:29: FutureWarning: The new recommended value for bg_label is 0. Until version 0.19, the default bg_label value is -1. From version 0.19, the bg_label default value will be 0. To avoid this warning, please explicitly set bg_label value.\n"
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:19: FutureWarning: skimage.measure.label's indexing starts from 0. In future version it will start from 1. To disable this warning, explicitely set the `start_label` parameter to 1.\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:30: FutureWarning: The new recommended value for bg_label is 0. Until version 0.19, the default bg_label value is -1. From version 0.19, the bg_label default value will be 0. To avoid this warning, please explicitly set bg_label value.\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f7fbceaf910>"
+              "<matplotlib.image.AxesImage at 0x7fe5e535c2d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -510,7 +544,7 @@
       "metadata": {
         "id": "T0vslJ7dkFfk"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
