--- a/02_Intro_Pandas_Numpy.ipynb
+++ b/02_Intro_Pandas_Numpy.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "02-Intro_Pandas_Numpy.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +59,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -108,9 +107,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "ySb3DYwW6ppr"
       },
@@ -139,9 +136,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "YMJY_ZMM7YBp"
       },
@@ -170,9 +165,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "wsCCINAU7FAh"
       },
@@ -237,9 +230,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "wE3u7Htm86Y0"
       },
@@ -266,9 +257,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "7YyRNIC68_H6"
       },
@@ -302,9 +291,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "RlEiBDuS9EGT"
       },
@@ -331,9 +318,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "onr5TS6P9OHZ"
       },
@@ -366,9 +351,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "2U7rOHOV9Tyy"
       },
@@ -395,9 +378,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "IBDGquJE9bBq"
       },
@@ -410,16 +391,17 @@
         "id": "i8P0PD2ZA-Nt"
       },
       "source": [
-        "The lists of values contained in Pandas DataFrame are in fact Numpy arrays. A large part of the computing logic in Pandas is inspired from Numpy, therefore we now make a detour to Numpy before coming back to DataFrames."
+        "The lists of values contained in Pandas DataFrame are in fact Numpy arrays. A \n",
+        "large part of the computing logic in Pandas is inspired from Numpy, therefore we now make a detour to Numpy before coming back to DataFrames."
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Exercise"
+        "# Exercise"
       ],
       "metadata": {
-        "id": "cJesRq30VoQo"
+        "id": "W0EVprp7euN1"
       }
     },
     {
@@ -429,7 +411,7 @@
       },
       "source": [
         "\n",
-        "1. In the Data folder on Ilias there is the data file 4ms_10 av_30 s_Absorbance_10-32-04-868.txt. Upload this file to a folder on your google drive. If you don't have a google account, make it now. Look at the file by clicking on it. Try to make sense of the data with the help of the metadata file also in the Ilias folder. \n",
+        "1. In the Data folder on Ilias there is the data file CCD-Data.txt. Upload this file to a folder on your google drive. If you don't have a google account, make it now. Look at the file by clicking on it. Try to make sense of the data with the help of the metadata file also in the Ilias folder. \n",
         "\n",
         "2. Mount the file to this your notebook (example code below). The path and the file name must match the ones on your google drive, of course.\n"
       ]
@@ -450,7 +432,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Study and play with the code below. Try to understand based on the API description (https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html). Hint: Use the header argument."
+        "3. Try to understand based on the API description (https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html) and find out how to read the data into a DataFrame without the header information. Hint: Use the header argument."
       ],
       "metadata": {
         "id": "bHMdX664RcQ9"
@@ -463,7 +445,8 @@
       },
       "source": [
         "#import pandas as pd\n",
-        "#df = pd.read_csv(path, delimiter='\\t')"
+        "#df = pd.read_csv(path, delimiter='\\t')\n",
+        "#df.head()"
       ],
       "execution_count": null,
       "outputs": []
@@ -471,7 +454,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Study this dataset a bit with the df.head(), df.info() and df.describe() methods. The available metadata is [here](https://docs.google.com/document/d/1L6m4OFiCKSHlHlr4_4TFKLKHcJfIkiMhHtD3tcsxpD8/edit?usp=sharing)"
+        "4. Study this dataset a bit with df.info() and df.describe() methods. How big is the dataset: How many rows, how many columns, how much space in the memory? "
       ],
       "metadata": {
         "id": "V-hJAIi5R69m"
@@ -480,44 +463,14 @@
     {
       "cell_type": "code",
       "source": [
-        "df.head()"
+        "#df.info()\n",
+        "#df.describe()"
       ],
       "metadata": {
         "id": "mJ1eSjLTAB7n"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "P0Dw8PC2BIjm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "JflZErgxLI8K"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "How big is the dataset? How many rows, how many columns, how space in the memory? The data are spectral lines from some chemistry experiment with some other information in the first four columns. We will come back to this dataset later.  "
-      ],
-      "metadata": {
-        "id": "CL96e1h-SXh6"
-      }
     },
     {
       "cell_type": "markdown",
@@ -540,35 +493,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "b4C_XMGmQYRI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "6. Check out other pandas read methods here: https://pandas.pydata.org/docs/reference/io.html"
+        "After finishing the exercise fill this one question [form](https://docs.google.com/forms/d/e/1FAIpQLSc1U9FGUqwizHwXZSf1dtGHwaGqyxjQuRxnhHYFPy1VUtrL4g/viewform?usp=sf_link) (mandatory) !"
       ],
       "metadata": {
-        "id": "Dh4ypNVEYsqq"
+        "id": "Z3m_Kom4fQcf"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "sfrQGNjc20L0"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
