--- a/04_Dataframes_Stats_Plotting.ipynb
+++ b/04_Dataframes_Stats_Plotting.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Plotting and Descriptive Statistics on Dataframes"
+        "# 4.1 Plotting and Descriptive Statistics on Dataframes"
       ],
       "metadata": {
         "id": "dUiZBPrcTMTz"
@@ -234,7 +234,7 @@
         "id": "oiQ_YoF2tny-"
       },
       "source": [
-        "## Exercise\n",
+        "## Exercise 4,1\n",
         "\n",
         "1. Using Pandas, import the CSV file located at https://raw.githubusercontent.com/allisonhorst/palmerpenguins/master/inst/extdata/penguins.csv\n",
         "2. Display the first 3 lines using the ```head()``` function.\n",
@@ -449,9 +449,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Exercise\n",
+        "# Exercise 4.2\n",
         "\n",
-        "We return to the CCD dataset. Show the boxplots of ten wavelengths, roughly equidistant between the lowest and highest. "
+        "We return to the CCD dataset. Show the boxplots of ten wavelengths, roughly equidistant between the minumum and maximum wavelength in the dataset. "
       ],
       "metadata": {
         "id": "den2VClzRCT5"
@@ -459,19 +459,25 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "dFSP0Is1RKda"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now fill this [form](https://docs.google.com/forms/d/e/1FAIpQLSd5QH237yJ2PizRG1Of8mV9zDzcJLH6nmEI2KqVX1cWINi9Fg/viewform?usp=sf_link), needed for getting participation assignment points"
+      ],
+      "metadata": {
+        "id": "yM36wOVqzzRD"
+      }
     }
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [],
       "name": "04-Dataframes-Stats-Plotting.ipynb",
       "provenance": [],
       "include_colab_link": true
