--- a/CodingTask1.ipynb
+++ b/CodingTask1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CodingTask1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNlzV4Tw82QZoZKBXdHG6tT",
+      "authorship_tag": "ABX9TyOOE3E35Q0l1H9LquexsHRR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +41,9 @@
       "source": [
         "# Coding Task 1\n",
         "\n",
-        "- Deadline (upload to Ilias): 2022-03-20 24:00\n",
-        "- Estimated effort: 2-5 hours\n",
-        "- Data on Ilias (4ms_...) with metadata file CCD-Metadata\n"
+        "- Deadline (upload to Ilias): 2022-03-22 17:00\n",
+        "- Estimated effort: 2-5 hours (if you don't progress after 2 hours of trying, search for help, ChatGPT, Google, colleagues, course tutor)\n",
+        "- Data on Ilias: CCD-Data with metadata file CCD-Metadata\n"
       ],
       "metadata": {
         "id": "gn4RkUC66-ou"
@@ -62,10 +62,10 @@
       "cell_type": "markdown",
       "source": [
         "- Write a method (function) which removes the header information in the datafile and saves that information into a separate textfile. [0.5 points] \n",
-        "- Write a function which reduces the data resolution by averaging over 1, 2, 3 and 4 nm wavelengths. Save these 4 new reduced datasets in new files. Do this (1) by writing an explicit loop and (2) by using pandas methods. Measure the running times of the two approaches. [6 points]\n",
+        "- Write a function which reduces the data resolution by merging/averaging columns such that there is only one column per 1 nm. Now generalize this merging so that it works for any number nm er column. Implement the saving of the reduced dataset to a file. Do this (1) by writing an explicit loop (write line by line) and (2) by using pandas methods. Measure the running times of the two approaches. [6 points]\n",
         "- Write a function which takes two wavelengths as input and plots the difference of the data at these lengths over time. [2 points] \n",
         "- Let the x-axis be in seconds, label the axes with names and units, label the plot with color and legend, make a title for the plot. Save the plot to a file. [2 points]\n",
-        "- Plot the full and the reduced datasets in the same figure. Is there any visual difference? [2 points]"
+        "- Plot the full and some reduced datasets in the same figure. Is there any visual difference? [2 points]"
       ],
       "metadata": {
         "id": "rXqhhPMu9aPx"
@@ -73,9 +73,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "OfvMackX-SFc"
       },
