--- a/CodingTask1.ipynb
+++ b/CodingTask1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CodingTask1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOOE3E35Q0l1H9LquexsHRR",
+      "authorship_tag": "ABX9TyN7ZTT6r9MDaF2olRvnUHzB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,11 +61,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- Write a method (function) which removes the header information in the datafile and saves that information into a separate textfile. [0.5 points] \n",
-        "- Write a function which reduces the data resolution by merging/averaging columns such that there is only one column per 1 nm. Now generalize this merging so that it works for any number nm er column. Implement the saving of the reduced dataset to a file. Do this (1) by writing an explicit loop (write line by line) and (2) by using pandas methods. Measure the running times of the two approaches. [6 points]\n",
-        "- Write a function which takes two wavelengths as input and plots the difference of the data at these lengths over time. [2 points] \n",
-        "- Let the x-axis be in seconds, label the axes with names and units, label the plot with color and legend, make a title for the plot. Save the plot to a file. [2 points]\n",
-        "- Plot the full and some reduced datasets in the same figure. Is there any visual difference? [2 points]"
+        "- **CT-1.1** Write a method (function) which removes the header information in the \n",
+        "datafile and saves that information into a separate textfile. [0.5 points] \n",
+        "- **CT-1.2** Write a function which reduces the data resolution by merging/averaging columns such that there is only one column per 1 nm. [2.0 points]  \n",
+        "- **CT-1.3** Now generalize the above merging so that it works for any number nm er column. [2.0 points]\n",
+        "- **CT-1.4** Implement the saving of the reduced dataset to a file. Do this (1) by writing an explicit loop (write line by line) and (2) by using pandas methods. Measure the running times of the two approaches. [2.0 points]\n",
+        "- **CT-1.5** Write a function which takes two wavelengths as input and plots the difference of the data at these lengths over time. [2.0 points] \n",
+        "- **CT-1.6** Let the x-axis be in seconds, label the axes with names and units, label the plot with color and legend, make a title for the plot. Save the plot to a file. [2.0 points]\n",
+        "- **CT-1.7** Plot the full and some reduced datasets in the same figure. Is there any visual difference? [2.0 points]"
       ],
       "metadata": {
         "id": "rXqhhPMu9aPx"
