--- a/06_Numpy_indexing.ipynb
+++ b/06_Numpy_indexing.ipynb
@@ -511,17 +511,33 @@
         "id": "4NkEfp57mw8R"
       },
       "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        ""
-      ]
+        "# Submit one question regarding anything in the course so far\n",
+        "\n",
+        "Via this [link](https://docs.google.com/forms/d/e/1FAIpQLSeQskEubSUMw1lCRBBnOx5orKjCiMgQ-AWgkliu0Nnf-XEfvA/viewform?usp=sf_link) (mandatory)"
+      ],
+      "metadata": {
+        "id": "5pq9mZ83t5IA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cO8TUxasu4j2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [],
       "name": "06-Numpy_indexing.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
