--- a/CodingTask1.ipynb
+++ b/CodingTask1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "CodingTask1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7ZTT6r9MDaF2olRvnUHzB",
+      "authorship_tag": "ABX9TyNrzBSIZc4FmFlldJ1XCk7C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
       "source": [
         "# Coding Task 1\n",
         "\n",
-        "- Deadline (upload to Ilias): 2022-03-22 17:00\n",
+        "- Deadline: Send your solution notebook per email to Sigve by 2022-03-22 17:00\n",
         "- Estimated effort: 2-5 hours (if you don't progress after 2 hours of trying, search for help, ChatGPT, Google, colleagues, course tutor)\n",
         "- Data on Ilias: CCD-Data with metadata file CCD-Metadata\n"
       ],
