--- a/10_Basic_Linux.ipynb
+++ b/10_Basic_Linux.ipynb
@@ -26,9 +26,9 @@
       },
       "source": [
         "Researchers often need to work with computers running the Linux operating system. For example because:\n",
-        "- High Performance Computers run Linux\n",
+        "- High Performance Computers mostly run Linux\n",
         "- Machines and experiments are often operated by Linux machines\n",
-        "- Research software is only available for Linux\n",
+        "- Research software is sometimes only available for Linux\n",
         "- ...\n",
         "\n",
         "For a brief history of Linux you may look at the [wikipedia entry](https://en.wikipedia.org/wiki/Linux)\n",
@@ -56,7 +56,7 @@
         "id": "LpPkVdoZeBjh",
         "outputId": "c3abbe6a-eb79-4055-e2f0-a4a1cdb698b1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "On Linux systems there is the super user, i.e. the system administator that can do everything (also look at other users files and delete them), and normal users. They are called root and user. On your virtual machine on colab I am root as the ls -l command showed me. "
+        "On Linux systems there is the super user, i.e. the system administator that can do everything (also look at other users files and delete them), and normal users. They are called root and user. On your virtual machine on colab you are root as the ls -l command showed us. "
       ],
       "metadata": {
         "id": "ybxzb2TWe8GT"
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "KE22FUruhSWS"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,9 +231,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "nJkW7gp4FeEQ"
       },
