--- a/10_Basic_Linux.ipynb
+++ b/10_Basic_Linux.ipynb
@@ -237,6 +237,20 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Mandatory assignment by 17:00\n",
+        "Submit one question regarding this tutorial [here](https://docs.google.com/forms/d/e/1FAIpQLSeQskEubSUMw1lCRBBnOx5orKjCiMgQ-AWgkliu0Nnf-XEfvA/viewform?usp=sf_link) !\n"
+      ],
+      "metadata": {
+        "id": "RUhhsA8amOIK"
+      }
     }
   ],
   "metadata": {
