--- a/11_Basic_Image_Processing.ipynb
+++ b/11_Basic_Image_Processing.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TYDcmKVCxBZ7"
       },
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "qgCE_TZ7xBZ8"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Yt1eDe2DxBZ8"
       },
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "OOOdmkJkhpUZ",
         "outputId": "44b0be60-bde5-4620-da5c-d2000baf4f1f",
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "3oWxa2cG_B6Z",
         "outputId": "cb690d0d-8d74-47b0-f889-13f942a5c037",
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "yrd5Zl-A-t7_"
       },
@@ -192,7 +192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -330,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -536,6 +536,26 @@
       "metadata": {
         "id": "N36uc9AXdRRZ"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Mandatory assignment by 17:00\n",
+        "\n",
+        "Submit one question regarding this notebook [here](https://docs.google.com/forms/d/e/1FAIpQLSeQskEubSUMw1lCRBBnOx5orKjCiMgQ-AWgkliu0Nnf-XEfvA/viewform?usp=sf_link)."
+      ],
+      "metadata": {
+        "id": "ZC4wsFvZuM0I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VplOFPBvuc1G"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
